--- a/css/style.css
+++ b/css/style.css
@@ -10,3 +10,87 @@ h1, h2, h3, h4, h5, h6 {
     text-align: center;
     font-size: 40pt;
 }
+
+h2 {
+    font-size: 22pt;
+    margin: 1em;
+}
+
+header img{
+    width: 250px;
+
+}
+
+header {
+    text-align: center;
+    margin: 4em;
+}
+
+/* Hero section and Footer */
+#hero, footer {
+    color: #F7F7F7;
+    border: 4px solid #E94C27;
+    background-color: #9ebdf0;
+    text-align: center;
+    padding: 10px;
+    margin-bottom: 1rem;
+}
+
+#hero img {
+    width: 300px;
+}
+
+/* Credential's section */
+#websties {
+    text-align: center;
+
+}
+
+/* Websites Section */
+#cred {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+#cred ul {
+    width: 225px;
+    margin: 0 auto;
+}
+
+#cred ul li:nth-child(odd) {
+    color: brown;
+}
+#cried ul li:nth-child(even) {
+    color: green; 
+}
+
+/* Review Section */
+#reviews {
+    border: 4px solid #E94C27;
+    margin-bottom: 1rem;
+    margin-top: 1rem;
+}
+
+#review div {
+    padding: 0.5rem;
+    max-width: 40 rem;
+    margin: 0 auto;
+}
+
+#review div p {
+    padding: 0.1rem ;
+}
+
+#review div p:nth-child(1n+1):first-letter {
+    color: #f5e4df;
+    background-image: linear-gradient(#F6CD1C, #9ebdf0);
+    float: left;
+    font-size: 4em;
+    margin-right: .25em;
+    padding: .25em;
+    line-height: .65;
+    text-shadow: 2px 2px 3px black;
+    box-shadow:4px 4px 4px black;
+    border-top-left-radius: .2em;
+    border-bottom-right-radius: .2em;
+}
